# rpihomekit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  publish-package.yml
client/: Dockerfile  README.md  jsconfig.json  nginx.conf  package-lock.json  package.json
client/.storybook/: main.js
client/app/: Header.js  components.js  layout.js  page.js  styles.css
client/app/components/: Apps.js  Card.css  Card.js  FetchCard.js  Header.js  HomeButton.js
client/components/: Box.js  Box.stories.js  Card.js  Card.stories.js  Welcome.js  styles.css
client/components/buttons-links/: Button.stories.js  Link.js  Link.stories.js
client/components/layouts/: Header.js  Header.stories.js
client/libs/: fetch.js
frontend/app/: layout.js  page.js
frontend/app/components/: Card.css  Card.js
frontend/app/stats/: page.js
frontend/components/: Card.js  WelcomeCard.js  card.css
frontend/pages/: index.js  stats.js
rpihomekit/: app.py  views.py
rpihomekit/rpi/: stats.py
scripts/: app-run-dev.sh  docker-run-server.sh  flask-run-dev.sh  react-run-dev.sh
server/: Dockerfile  README.md
server/rpihomekit/: __init__.py  app.py
