[tool.poetry]
name = "rpihomekit"
version = "0.1.3"
description = "Rasperry Pi Python homekit"
authors = ["giocaizzi <giocaizzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
